--- a/EntryNow.WebApp/Pages/References/Index.razor
+++ b/EntryNow.WebApp/Pages/References/Index.razor
@@ -101,10 +101,29 @@
                         @if (_page != 1)
                         {
                             <li class="page-item"><a class="page-link" @onclick="GetDataOnPreviousPage" href="" @onclick:preventDefault>&laquo;</a></li>
+                            <li class="page-item"><a class="page-link" @onclick="GetDataOnPreviousPage" href="" @onclick:preventDefault>...</a></li>
                         }
                         @if (totalPages > 0)
                         {
-                            @for (int i = 1; i <= totalPages; i++)
+                            @for (int i = _page - 1; i < _page + 2 ; i++)
+                            {
+                                int buttonNumber = i;
+                                @if (buttonNumber < 1 || buttonNumber > totalPages)
+                                {
+                                }
+                                else
+                                {
+                                    @if (buttonNumber == _page)
+                                    {
+                                            <li class="page-item active"><a class="page-link" @onclick="@(() => GetDataByPageNumber(buttonNumber))" href="" @onclick:preventDefault>@i</a></li>
+                                    }
+                                    else
+                                    {
+                                            <li class="page-item"><a class="page-link" @onclick="@(() => GetDataByPageNumber(buttonNumber))" href="" @onclick:preventDefault>@i</a></li>
+                                    }
+                                }
+                            }
+                            @*@for (int i = 1; i <= totalPages; i++)
                             {
                                 int buttonNumber = i;
                                 @if (buttonNumber == _page)
@@ -115,7 +134,7 @@
                                 {
                                     <li class="page-item"><a class="page-link" @onclick="@(() => GetDataByPageNumber(buttonNumber))" href="" @onclick:preventDefault>@i</a></li>
                                 }
-                            }
+                            }*@
                         }
                         @if (_page == totalPages)
                         {
@@ -123,6 +142,7 @@
                         }
                         @if (_page != totalPages)
                         {
+                            <li class="page-item"><a class="page-link" @onclick="GetDataOnNextPage" href="" @onclick:preventDefault>...</a></li>
                             <li class="page-item"><a class="page-link" @onclick="GetDataOnNextPage" href="" @onclick:preventDefault>&raquo;</a></li>
                         }
                     </ul>
